feat: Add verification
