# docs/swagger.json
@@ -44,9 +44,12 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
+                        "description": "Check your email",
                         "schema": {
-                            "$ref": "#/definitions/main.AuthResponse"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     },
                     "400": {
@@ -137,6 +140,57 @@
                             "additionalProperties": {
                                 "type": "string"
                             }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/verify": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Verify a user account using the JWT token received during registration",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Verify user account",
+                "parameters": [
+                    {
+                        "description": "Verification data",
+                        "name": "verification",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.UserVerifyRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.OkResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
                         }
                     },
                     "500": {
@@ -1593,6 +1647,15 @@
                 }
             }
         },
+        "main.OkResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Operation successful"
+                }
+            }
+        },
         "main.PaginationResponse": {
             "type": "object",
             "properties": {
@@ -1678,6 +1741,9 @@
         "types.User": {
             "type": "object",
             "properties": {
+                "is_verified": {
+                    "type": "boolean"
+                },
                 "user_id": {
                     "type": "integer"
                 },
@@ -1689,6 +1755,9 @@
         "types.UserCreateRequest": {
             "type": "object",
             "properties": {
+                "email": {
+                    "type": "string"
+                },
                 "password": {
                     "type": "string"
                 },
@@ -1704,6 +1773,14 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.UserVerifyRequest": {
+            "type": "object",
+            "properties": {
+                "verification_code": {
                     "type": "string"
                 }
             }
